force-app/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
    <description>PGP-0025 - Store Certification details of Account.</description>
    <label>Certification</label>
    <nameField>
        <displayFormat>CER-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>