force-app/main/default/objects/Certification__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <description>PGP-0025 - Store Type of certification type in the record.</description>
    <label>Certification Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Of Container Logistics</fullName>
            </value>
            <value>
                <fullName>Certified Shipping Container Safety Inspector</fullName>
            </value>
            <value>
                <fullName>Advanced Container Stacking and Storage Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>