force-app/main/default/objects/Certification__c/fields/Date_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Date_Obtained__c</fullName>
    <description>PGP-0025 - Store certification obtain date.</description>
    <label>Date Obtained</label>
    <type>Date</type>
</CustomField>