force-app/main/default/objects/Certification__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>PGP-0025 - Stores whether certification is active or not.</description>
    <label>Is Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>