force-app/main/default/objects/Certification__c/fields/Renewal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cost__c</fullName>
    <description>PGP-0025 - Stores certification renewal cost</description>
    <label>Renewal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>